<resources>

    <!--GENERAL-->
    <string name="app_name">Get Winner</string>
    <string name="lorem_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
        been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
        scrambled it to make a type specimen book.
    </string>

    <!--IgProfileActivity-->
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="you_are_logged_as">You are logged as:</string>
    <string name="select_a_post_to_get_list_of_comments">SELECT A POST TO GET LIST OF COMMENTS:</string>
</resources>
