<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    >

        <TextView
                android:id="@+id/text_you_are_logged_as"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/you_are_logged_as"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="center"
                android:textAllCaps="true"
                android:background="@color/grayApp"
                android:textColor="@android:color/black"
                android:textSize="30sp"
        />

        <ImageView
                android:id="@+id/image_user_avatar"
                android:layout_width="80dp"
                android:layout_height="80dp"
                tools:ignore="ContentDescription"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_you_are_logged_as"
                android:layout_margin="@dimen/margin_start_ig_profile"
                tools:src="@drawable/ic_launcher_background"
        />

        <TextView
                android:id="@+id/text_followers_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="605"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/image_user_avatar"
                app:layout_constraintEnd_toStartOf="@+id/text_following_count"
                app:layout_constraintTop_toTopOf="@+id/image_user_avatar"
                app:layout_constraintBottom_toBottomOf="@+id/image_user_avatar"
        />

        <TextView
                android:id="@+id/text_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/followers"
                app:layout_constraintStart_toStartOf="@+id/text_followers_count"
                app:layout_constraintEnd_toEndOf="@+id/text_followers_count"
                app:layout_constraintTop_toBottomOf="@+id/text_followers_count"
        />

        <TextView
                android:id="@+id/text_following_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="2929"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/text_followers_count"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/image_user_avatar"
                app:layout_constraintBottom_toBottomOf="@+id/image_user_avatar"
        />

        <TextView
                android:id="@+id/text_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following"
                app:layout_constraintStart_toStartOf="@+id/text_following_count"
                app:layout_constraintEnd_toEndOf="@+id/text_following_count"
                app:layout_constraintTop_toBottomOf="@+id/text_followers_count"
        />

        <TextView
                android:id="@+id/text_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Sergey Kharuk Photography"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_user_avatar"
                android:layout_marginStart="@dimen/margin_start_ig_profile"
                android:layout_marginTop="@dimen/margin_start_ig_profile"
        />

        <TextView
                android:id="@+id/text_bio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="@string/lorem_text"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_username"
                android:layout_marginStart="@dimen/margin_start_ig_profile"
                android:layout_marginEnd="@dimen/margin_start_ig_profile"
                android:layout_marginTop="4dp"
        />

        <TextView
                android:id="@+id/text_select_post"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/select_a_post_to_get_list_of_comments"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_bio"
                android:gravity="center"
                android:textAllCaps="true"
                android:background="@color/grayApp"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:layout_marginTop="12dp"
                android:padding="12dp"
        />

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_select_post"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:listitem="@layout/item_ig_post"
                tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                tools:spanCount="3"
                android:nestedScrollingEnabled="false"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>